@@ -17,6 +17,7 @@ use Plack::Util::Accessor qw(
     meta_tag
     token_per_request
     parameter_name
+    header_name
     _token_generator
 );
 
@@ -60,11 +61,26 @@ sub call {
     if ($request->method =~ m{^post$}i) {
         $self->log(info => 'POST submitted');
 
-        my $val = $request->parameters->{ $self->parameter_name } || '';
+        # X- header takes precedence over form fields
+        my $val;
+        $val = $request->header( $self->header_name )
+            if (defined $self->header_name);
+        # fallback to the parameter value
+        $val ||= $request->parameters->{ $self->parameter_name };
 
-        # it's an immediate fail if we can't find the parameter
-        return $self->xsrf_detected({ msg => 'form field missing'})
-            unless $val;
+        # it's not easy to decide if we're missing the X- value or the form
+        # value
+        # We can say for certain that if we don't have the header_name set
+        # it's a missing form parameter
+        # If it is set ... well, either could be missing
+        if (not defined $val and not length $val) {
+            # no X- headers expected
+            return $self->xsrf_detected({ msg => 'form field missing'})
+                if not defined $self->header_name;
+
+            # X- headers and form data allowed
+            return $self->xsrf_detected({ msg => 'xsrf token missing'})
+        }
 
         # get the value we expect from the cookie
         return $self->xsrf_detected({ msg => 'cookie missing'})
@@ -95,8 +111,11 @@ sub call {
             expires => time + $self->cookie_expiry_seconds,
         );
 
+        # make it easier to work with the headers
+        my $headers = Plack::Util::headers($res->[1]);
+
         # we can't form-munge anything non-HTML
-        my $ct = Plack::Util::header_get($res->[1], 'Content-Type') || '';
+        my $ct = $headers->get('Content-Type') || '';
         if($ct !~ m{^text/html}i and $ct !~ m{^application/xhtml[+]xml}i){
             return $res;
         }
@@ -268,6 +287,7 @@ You may also over-ride any, or all of these values:
             cookie_expiry_seconds   => (3 * 60 * 60),
             token_per_request       => 0,
             meta_tag                => undef,
+            header_name             => undef,
             blocked                 => sub {
                                         return [ $status, $headers, $body ]
                                     },
@@ -302,6 +322,12 @@ section of output pages.
 This is useful when you are using javascript that requires access to the token
 value for making AJAX requests.
 
+=item header_name (default: undef)
+
+If this is set, use the value as the name of the response heaer that the token
+can be sent in. This is useful for non-browser based submissions; e.g.
+Javascript AJAX requests.
+
 =item blocked (default: undef)
 
 If this is set it should be a PSGI application that is returned instead of the
@@ -323,6 +349,11 @@ messages will be of the form C<XSRF detected [reason]>
 
 The request was submitted but there was no value submitted in the form field
 specified by <C$self->parameter_name> [default: xsrf_token]
+
+=item xsrf token missing
+
+The application has been configured to accept an 'X-' header and no token
+value was found in either the header or a suitable form field. [default: undef]
 
 =item cookie missing
 
